--- a/MaterialControlFront/Views/Material/Edit.cshtml
+++ b/MaterialControlFront/Views/Material/Edit.cshtml
@@ -15,26 +15,33 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form id="createForm">
+            <form id="editForm" method="post" asp-controller="Material" asp-action="Edit">
+                <input type="hidden" asp-for="Type_Id">
                 <div class="card-body">
                     <div class="form-group">
                         <label for="type_code">Code รหัส:</label>
-                        <input type="text" name="type_code" class="form-control" id="type_code" placeholder="Material Type Code">
+                        <input type="text" asp-for="Type_Code" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label for="type_name">Name ชื่อประเภท:</label>
-                        <input type="text" name="type_name" class="form-control" id="type_name" placeholder="Material Type Name">
+                        <input type="text" asp-for="Type_Name" class="form-control">
+                        <span asp-validation-for="Type_Name"></span>
                     </div>
                     <div class="form-group">
                         <label for="type_remark">Remark หมายเหตุ:</label>
-                        <textarea name="type_remark" class="form-control" id="type_remark" placeholder="Ramark"></textarea>
+                        <textarea name="type_remark" asp-for="Type_Remark" class="form-control"></textarea>
                     </div>
                 </div>
                 <!-- /.card-body -->
                 <div class="card-footer">
-                    <button type="button" id="btnBack" class="btn btn-secondary float-left" onClick="history.go(-1); return false;">Go Back</button>
-                    <button type="submit" class="btn btn-success float-right">Create</button>
+                    <button type="button" id="btnBack" class="btn btn-secondary float-left" onClick="history.go(-1); return false;">Cancel</button>
+                    <button type="submit" class="btn btn-success float-right">Edit</button>
                 </div>
+                @if(ViewBag.isErrorMessage != null){
+                    //Display the error message
+                    //You can: display it in a div (without popup), you can show a javascript Alert(), or display a modal dialog.   
+                    <span class="text text-danger">@ViewBag.errorMessage</span> 
+                }
             </form>
         </div>
         <!-- /.card -->
